<resources>
    <string name="app_name">Simple 5/3/1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="squat_week_one_label">Squat Week One</string>
    <string name="bench_week_one_label">Bench Week One</string>
    <string name="deadlift_week_one_label">Deadlift Week One</string>
    <string name="press_week_one_label">Press Week One</string>

    <string name="squat_week_two_label">Squat Week Two</string>
    <string name="bench_week_two_label">Bench Week Two</string>
    <string name="deadlift_week_two_label">Deadlift Week Two</string>
    <string name="press_week_two_label">Press Week Two</string>

    <string name="squat_week_three_label">Squat Week Three</string>
    <string name="bench_week_three_label">Bench Week Three</string>
    <string name="deadlift_week_three_label">Deadlift Week Three</string>
    <string name="press_week_three_label">Press Week Three</string>

    <string name="squat_week_four_label">Squat Deload</string>
    <string name="bench_week_four_label">Bench Deload</string>
    <string name="deadlift_week_four_label">Deadlift Deload</string>
    <string name="press_week_four_label">Press Deload</string>

    <string name="max_formula_text">The fields below will be used to calculate your training max. Please enter your best rep record, or 1RM.</string>
    <string name="squat_weight_hint">Squat Weight</string>
    <string name="repetitions_hint">Repetitons</string>
    <string name="bench_press_weight_hint">Bench Weight</string>
    <string name="deadlift_weight_hint">Deadlift Weight</string>
    <string name="press_weight_hint">Press Weight</string>
    <string name="pounds_label_radioBtn">lbs</string>
    <string name="kilograms_label_radioBtn">kg</string>
    <string name="calculate_maxes_btn_label">Calculate Maxes</string>
    <string name="units_textView_label">Units</string>

    <string name="round_up_settings_label">Round Up</string>
    <string name="use_first_set_last_label">Use First Set Last</string>
    <string name="reset_btn_label">Restore Last Saved</string>
    <string name="increment_btn_label">Auto Increment</string>
    <string name="store_new_maxes_btn_label">Record These Maxes</string>

    <string name="edit_weight_label">Weight</string>
    <string name="txt_x_label">x</string>

    <string-array name="assistance_types">
        <item>None</item>
        <item>Boring But Big Flat Fifty</item>
        <item>Boring But Big Ascending</item>
        <item>Boring But Big Descending</item>
        <item>Boring But Big Pyramid</item>
    </string-array>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="edit_notes_hint">Notes...</string>

    <string-array name="lift_types">
        <item>Squat</item>
        <item>Bench Press</item>
        <item>Deadlift</item>
        <item>Press</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_name_i_e_wavefour">File name i.e. WaveFour</string>
</resources>
