<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout style="@style/CycleDayPickerLinearLayoutStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Assistance Work" />

        <Spinner
            android:id="@+id/spinner_assistance_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/assistance_types"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <View style="@style/SimpleDivider" />

    <LinearLayout style="@style/CycleDayPickerLinearLayoutStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/use_first_set_last_label" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switch_use_fsl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical" />
    </LinearLayout>

    <View style="@style/SimpleDivider" />

    <LinearLayout style="@style/CycleDayPickerLinearLayoutStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/round_up_settings_label" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switch_round_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical" />
    </LinearLayout>

    <View style="@style/SimpleDivider" />

    <LinearLayout style="@style/CycleDayPickerLinearLayoutStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/units_textView_label" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_units_pounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pounds_label_radioBtn" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_units_kilograms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilograms_label_radioBtn" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>